[gd_scene load_steps=4 format=3 uid="uid://o8xduyluqbn3"]

[ext_resource type="Script" path="res://scripts/ui/move_rect.gd" id="1_dm6a4"]

[sub_resource type="Theme" id="Theme_asfw6"]
Label/font_sizes/font_size = 24

[sub_resource type="Theme" id="Theme_xdeck"]
Label/colors/font_color = Color(0, 0, 0, 1)

[node name="MoveRect" type="ColorRect"]
custom_minimum_size = Vector2(550, 100)
size_flags_horizontal = 4
theme = SubResource("Theme_asfw6")
color = Color(0.995621, 0.981004, 0.954689, 1)
script = ExtResource("1_dm6a4")

[node name="TypeColor" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 201.0
offset_bottom = 100.0
color = Color(0.783546, 0.80251, 0.786462, 1)

[node name="MarginContainer" type="MarginContainer" parent="TypeColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MoveName" type="Label" parent="TypeColor/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "MOVE NAME"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 201.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_xdeck")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PowerLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "POWER: ACC: ENERGY:"

[node name="DescLabel" type="RichTextLabel" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "sefsef"
